--- a/src/Welcome Page.css
+++ b/src/Welcome Page.css
@@ -11,6 +11,8 @@ body{
     backdrop-filter: blur(5px);
     background-repeat:no-repeat;
     background-size: cover;
+    align-items: center;
+    justify-content: center;
 }
 .Welcome{
     text-align: center;
@@ -35,6 +37,7 @@ body{
     justify-content: center;
     text-align: center;
     margin: 50px;
+    margin-bottom: 20px;
     margin-top: 25px;
     letter-spacing: 0.5px;
     background-color: rgba(0, 147, 233, 1) ;
@@ -49,4 +52,140 @@ body{
 }
 .Welcome button:focus{
     background-color:  rgba(0, 147, 233, 1);
+}
+.newPatient{
+    width: min-content;
+    height: min-content;
+    color: white;
+    padding: 20px;
+    background: /*rgba(0, 147, 233, 0.7)*/ rgba(255, 255, 255, 0.2);
+    backdrop-filter: blur(5px);
+    box-shadow: 5px 5px 10px 5px  rgba(0, 0, 0, 0.5) ;
+    border-radius: 12px;
+    text-align: center;
+    margin: 2%;
+    margin: auto;
+    margin-bottom: 10px;
+}
+.newPatient input{
+    border: hidden;
+    height: 30px;
+    text-align: center;
+    color: black;
+    border-bottom: 10px black;
+    background-color: white;
+    border-radius: 5px;
+    margin-top: 10px;
+    margin-right: 10px;
+    margin-left: 10px;
+}
+.newPatient select{
+    border: hidden;
+    height: 30px;
+    text-align: center;
+    color: black;
+    border-bottom: 10px black;
+    background-color: white;
+    border-radius: 5px;
+    margin-top: 10px;
+    margin-right: 10px;
+    margin-left: 10px;
+}
+
+
+/*                                                      Search Patient                                                                  */
+.searchpatient{
+    width: max-content;
+    height: min-content;
+    color: white;
+    padding: 20px;
+    background: /*rgba(0, 147, 233, 0.7)*/ rgba(255, 255, 255, 0.2);
+    backdrop-filter: blur(5px);
+    box-shadow: 5px 5px 10px 5px  rgba(0, 0, 0, 0.5) ;
+    border-radius: 12px;
+    text-align: center;
+    margin: 2%;
+    margin: auto;
+    margin-bottom: 10px;
+}
+.searchpatient input{
+    border: hidden;
+    height: 30px;
+    text-align: center;
+    color: black;
+    border-bottom: 10px black;
+    background-color: white;
+    border-radius: 5px;
+    margin-top: 10px;
+    margin-right: 10px;
+    margin-left: 10px;
+}
+.historyform{
+    width: min-content;
+    height: min-content;
+    color: white;
+    padding: 20px;
+    background: /*rgba(0, 147, 233, 0.7)*/ rgba(255, 255, 255, 0.2);
+    backdrop-filter: blur(5px);
+    box-shadow: 5px 5px 10px 5px  rgba(0, 0, 0, 0.5) ;
+    border-radius: 12px;
+    text-align: center;
+    margin: 2%;
+    margin: auto;
+    margin-bottom: 10px;
+}
+
+.historyform input{
+    border: hidden;
+    display: flex;
+    height: 30px;
+    text-align: center;
+    color: black;
+    border-bottom: 10px black;
+    background-color: white;
+    border-radius: 5px;
+    margin-top: 10px;
+    margin-right: 10px;
+    margin-left: 10px;
+}
+.historyform button{
+    
+    justify-content: center;
+    text-align: center;
+    margin-bottom: 20px;
+    letter-spacing: 0.5px;
+    background-color: rgba(0, 147, 233, 1) ;
+    border: none;
+    font-weight: 600;
+}
+.historyform button:hover{
+    box-shadow: 2px 2px 10px 5px  rgba(0, 147, 233, 0.7);
+    background-color:  rgba(0, 147, 233, 1);
+    backdrop-filter: blur(5px);
+
+}
+.historyform button:focus{
+    background-color:  rgba(0, 147, 233, 1);
+}
+
+
+.NewEntry button{
+    padding-top: 2px;
+}
+/*                                                              History p tag                                                               */
+.History{
+    width: max-content;
+    height: min-content;
+    color: white;
+    padding: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
+    background: /*rgba(0, 147, 233, 0.7)*/ rgba(255, 255, 255, 0.2);
+    backdrop-filter: blur(5px);
+    box-shadow: 5px 5px 10px 5px  rgba(0, 0, 0, 0.5) ;
+    border-radius: 12px;
+    text-align: center;
+    margin: 2%;
+    margin: auto;
+    margin-bottom: 10px;
 }
